<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="fifth_fragment_label">Fifth Fragment</string>
    <string name="sixth_fragment_label">Sixth Fragment</string>
    <string name="seventh_fragment_label">Seventh Fragment</string>
    <string name="eighth_fragment_label">Eighth Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="question_1">Which statement is false regarding an Activity?</string>
    <string name="question_1_answer_1">Activities talk to each other using Intents </string>
    <string name="question_1_answer_2">Activities are components that include a java or kotlin file and an xml file</string>
    <string name="question_1_answer_3">Activities are the main AI that will control everyone when Skynet takes over</string>
    <string name="question_1_answer_4">Activities represents a single screen with a user interface</string>
    <string name="question_2">Which element is NOT considered a ViewGroup?</string>
    <string name="question_2_answer_1">CoordinatorLayout</string>
    <string name="question_2_answer_2">LinearLayout</string>
    <string name="question_2_answer_3">FrameLayout</string>
    <string name="question_2_answer_4">Radio Button</string>
    <string name="question_3">What will cause a Lifecycle event to crash?</string>
    <string name="question_3_answer_1">Not calling the superclass when creating a Lifecycle event</string>
    <string name="question_3_answer_2">Forgetting to watch season 2 of the Mandalorian</string>
    <string name="question_3_answer_3">Saying that Ahsoka Tano is not the greatest Jedi</string>
    <string name="question_3_answer_4">Not having an offshoot series starting Ahsoka Tano</string>
    <string name="question_4">What is another name used for ActionBar?</string>
    <string name="question_4_answer_1">Status bar</string>
    <string name="question_4_answer_2">Toolbar</string>
    <string name="question_4_answer_3">System bar</string>
    <string name="question_4_answer_4">Crowbar</string>
    <string name="question_5">What are Kotlin Coroutines?</string>
    <string name="question_5_answer_1">Coroutines help to manage long-running tasks that might otherwise block the main thread and cause your app to become unresponsive</string>
    <string name="question_5_answer_2">Coroutine enable you to write cleaner and more concise app code</string>
    <string name="question_5_answer_3">A coroutine is a concurrency design pattern that you can use on Android to simplify code that executes asynchronously</string>
    <string name="question_5_answer_4">All of the above</string>
    <string name="question_6">Which statement is false regarding the AndroidManifest.xml file?</string>
    <string name="question_6_answer_1">It names the Java package for the application</string>
    <string name="question_6_answer_2">It describes the components of the application</string>
    <string name="question_6_answer_3">It determines which processes will host application components</string>
    <string name="question_6_answer_4">It declares publicly one\'s principles, policies, or intentions, especially of a political nature.</string>
    <string name="question_7">Which statement is true regarding an ImageView?</string>
    <string name="question_7_answer_1">An ImageView can support vector and bitmap assets</string>
    <string name="question_7_answer_2">An ImageView can make an image of anyone look 10 years younger</string>
    <string name="question_7_answer_3">An ImageView can do your end of the year taxes</string>
    <string name="question_7_answer_4">An ImageView can .tiff images</string>
    <string name="reset">Reset</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="welcome_to_the_kotlin_quiz">Welcome to the Kotlin and Android development Quiz</string>
    <string name="press_start_quiz_to_begin">Press Start Quiz to begin</string>
    <string name="next_question">Next Question</string>
    <string name="end">End</string>
    <string name="question_list">Question List</string>
    <string name="share">Share</string>
    <string name="cheat_sheet">Cheat sheet</string>
    <string name="quit_activity">Quit Activity</string>
    <string name="image_related_to_question">Image related to question</string>
    <string name="final_score">Your final score is</string>
    <string name="default_image">Default image</string>
    <string name="thank_you_for_taking_the_quiz">Thank you for taking the quiz</string>
    <string name="your_score_is">Your Score is:</string>
    <string name="question_1_title">Question 1</string>
    <string name="question_2_title">Question 2</string>
    <string name="question_3_title">Question 3</string>
    <string name="question_4_title">Question 4</string>
    <string name="question_5_title">Question 5</string>
    <string name="question_6_title">Question 6</string>
    <string name="question_7_title">Question 7</string>
    <string name="pick_a_question">Welcome!</string>
    <string name="cheat_sheet_title">Cheater!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score_is_0">Your score is 0</string>
</resources>