<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/QuizStartFragment">

    <fragment
        android:id="@+id/QuizStartFragment"
        android:name="com.comp3617.assignment1.QuizStartFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_start_quiz">

        <action
            android:id="@+id/action_QuizStartFragment_to_Question1Fragment"
            app:destination="@id/Question1Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question1Fragment"
        android:name="com.comp3617.assignment1.Question1Fragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_Question1Fragment_to_Question2Fragment"
            app:destination="@id/Question2Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question2Fragment"
        android:name="com.comp3617.assignment1.Question2Fragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_Question2Fragment_to_Question3Fragment"
            app:destination="@id/Question3Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question3Fragment"
        android:name="com.comp3617.assignment1.Question3Fragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_Question3Fragment_to_Question4Fragment"
            app:destination="@id/Question4Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question4Fragment"
        android:name="com.comp3617.assignment1.Question4Fragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_Question4Fragment_to_Question5Fragment"
            app:destination="@id/Question5Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question5Fragment"
        android:name="com.comp3617.assignment1.Question5Fragment"
        android:label="@string/sixth_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_Question5Fragment_to_Question6Fragment"
            app:destination="@id/Question6Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question6Fragment"
        android:name="com.comp3617.assignment1.Question6Fragment"
        android:label="@string/seventh_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_Question6Fragment_to_Question7Fragment"
            app:destination="@id/Question7Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Question7Fragment"
        android:name="com.comp3617.assignment1.Question7Fragment"
        android:label="@string/eighth_fragment_label"
        tools:layout="@layout/fragment_question">

        <action
            android:id="@+id/action_Question7Fragment_to_QuizStartFragment"
            app:destination="@id/QuizStartFragment" />
    </fragment>
</navigation>